fixed spacing for blue-container

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -329,7 +329,7 @@ nav {
 
 	.blue-container {
 		margin: $gapTablet 0;
-		padding: $gapTablet 0 0;
+		padding: $gapTablet 0;
 		flex-wrap: wrap;
 
 		ul {
@@ -427,7 +427,7 @@ nav {
 		margin-bottom: 5rem;
 	}
 	.blue-container {
-		padding: $gapMinidesk 0 $gapMinidesk;
+		padding: $gapMinidesk 0;
 		img {
 			width: 4rem;
 		}
